# AdventOfCode

./: .gitignore
2018/: Cargo.toml  InputReader.rs  day04.rs
2018/day01/: 1  1.rs
2018/day02/: 2.rs
2019/: Cargo.toml
2019/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  lib.rs  main.rs
2020/: Cargo.toml  aoc2020.code-workspace
2020/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
