[package]
name = "bohuim-aoc-2019"
version = "0.1.0"
authors = ["Bohui (Dennis) Moon <bohuim@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"
superslice = "1.0.0"
